# RDE_XRD

./: .gitignore  README.md  guide.md  history.md
container/: Dockerfile  main.py  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
container/modules/: datasets_process.py
container/modules_xrd/: factory.py  graph_handler.py  inputfile_handler.py  interfaces.py  invoice_handler.py  meta_handler.py  models.py  structured_handler.py
container/modules_xrd/bruker/uxd/: inputfile_handler.py  meta_handler.py
container/modules_xrd/rigaku/ras/: inputfile_handler.py  meta_handler.py
container/modules_xrd/rigaku/rasx/: inputfile_handler.py  meta_handler.py
container/modules_xrd/rigaku/txt/: inputfile_handler.py  meta_handler.py
docs/manual/: EndCover.md  index.md
docs/requirement_analysis/: 要件定義.xlsx
template/bruker/: batch.yaml  catalog.schema.json  jobs.template.yaml  metadata-def.json
template/bruker/tasksupport/: invoice.schema.json  metadata-def_bruker_uxd.json  rdeconfig.yaml
template/rigaku/: catalog.schema.json  jobs.template.yaml  metadata-def.json
template/rigaku/tasksupport/: invoice.schema.json  metadata-def_rigaku_ras.json  metadata-def_rigaku_rasx.json  metadata-def_rigaku_txt_space.json  metadata-def_rigaku_txt_tab.json  rdeconfig.yaml
tryout/: invoice_sample.json  tryout.md
